--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,20 +1,40 @@
+@import "./resposivo";
 header {
     padding-top: 1.5%;
     display: flex;
     justify-content: space-between;
-    cursor: pointer;
+    @include tablet {
+        background-color: $bgColor;
+    }
     .ativo {
         margin-left: 50px;
         color: $cor-letra;
         font-weight: 900;
         transition: 0.5s;
+        cursor: pointer;
         &:hover {
             font-size: 19px;
             transition: 0.5s;
         }
     }
+    .mobile-menu {
+        cursor: pointer;
+        div {
+            width: 32px;
+            height: 2px;
+            background: $cor-letra;
+            margin: 8px;
+            transition: 0.3s;
+            display: none;
+            @include tablet {
+                display: block;
+            }
+        }
+    }
+    .menu_total {
+        display: flex;
+    }
     .menu {
-        margin-left: 250px;
         ul {
             display: flex;
             list-style: none;
@@ -33,6 +53,7 @@ header {
     }
     .user {
         margin-right: 90px;
+        margin-left: 260px;
         .btn1 {
             width: 90px;
             height: 30px;
@@ -41,10 +62,55 @@ header {
             background-image: linear-gradient(to right, rgb(138, 2, 162), rgb(255, 0, 234));
         }
         .btn2 {
-            width: 120px;
+            width: 110px;
             height: 30px;
             @include StyleBotao;
             background: rgb(129, 156, 210);
         }
+        @include tablet {
+            display: flex;
+            margin-left: 0;
+        }
+    }
+    @include tablet {
+        .nav-list {
+            position: absolute;
+            top: 8vh;
+            right: 0;
+            width: 50vw;
+            height: 91vh;
+            background: $bgColor;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-around;
+            transform: translateX(100%);
+            transition: transform 0.3s ease-in;
+        }
+        .nav-list li {
+            margin-left: 0;
+            opacity: 0;
+        }
+    }
+    .nav-list.active {
+        transform: translateX(0);
+    }
+    @keyframes navLinkFade {
+        from {
+            opacity: 0;
+            transform: translateX(50px);
+        }
+        to {
+            opacity: 1;
+            transform: translateX(0);
+        }
+    }
+    .mobile-menu.active .line1 {
+        transform: rotate(-45deg) translate(-8px, 8px);
+    }
+    .mobile-menu.active .line2 {
+        opacity: 0;
+    }
+    .mobile-menu.active .line3 {
+        transform: rotate(45deg) translate(-5px, -7px);
     }
 }
