--- a/scss/style.css
+++ b/scss/style.css
@@ -1,16 +1,4 @@
 /* cor e fontes do site*/
-* {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-body {
-  background: #eeebeb;
-  font-family: sans-serif;
-}
-
 header {
   padding-top: 1.5%;
   display: -webkit-box;
@@ -19,7 +7,12 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  header {
+    background-color: #dad9d9;
+  }
 }
 
 header .ativo {
@@ -28,6 +21,7 @@ header .ativo {
   font-weight: 900;
   -webkit-transition: 0.5s;
   transition: 0.5s;
+  cursor: pointer;
 }
 
 header .ativo:hover {
@@ -36,8 +30,30 @@ header .ativo:hover {
   transition: 0.5s;
 }
 
-header .menu {
-  margin-left: 250px;
+header .mobile-menu {
+  cursor: pointer;
+}
+
+header .mobile-menu div {
+  width: 32px;
+  height: 2px;
+  background: #070067;
+  margin: 8px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  header .mobile-menu div {
+    display: block;
+  }
+}
+
+header .menu_total {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 header .menu ul {
@@ -64,6 +80,7 @@ header .menu ul li:hover {
 
 header .user {
   margin-right: 90px;
+  margin-left: 260px;
 }
 
 header .user .btn1 {
@@ -91,7 +108,7 @@ header .user .btn1:hover {
 }
 
 header .user .btn2 {
-  width: 120px;
+  width: 110px;
   height: 30px;
   cursor: pointer;
   margin-top: 5%;
@@ -112,6 +129,90 @@ header .user .btn2:hover {
   font-size: 18px;
 }
 
+@media screen and (max-width: 768px) {
+  header .user {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  header .nav-list {
+    position: absolute;
+    top: 8vh;
+    right: 0;
+    width: 50vw;
+    height: 91vh;
+    background: #dad9d9;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
+    -webkit-transition: -webkit-transform 0.3s ease-in;
+    transition: -webkit-transform 0.3s ease-in;
+    transition: transform 0.3s ease-in;
+    transition: transform 0.3s ease-in, -webkit-transform 0.3s ease-in;
+  }
+  header .nav-list li {
+    margin-left: 0;
+    opacity: 0;
+  }
+}
+
+header .nav-list.active {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+@-webkit-keyframes navLinkFade {
+  from {
+    opacity: 0;
+    -webkit-transform: translateX(50px);
+            transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    -webkit-transform: translateX(50px);
+            transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
+header .mobile-menu.active .line1 {
+  -webkit-transform: rotate(-45deg) translate(-8px, 8px);
+          transform: rotate(-45deg) translate(-8px, 8px);
+}
+
+header .mobile-menu.active .line2 {
+  opacity: 0;
+}
+
+header .mobile-menu.active .line3 {
+  -webkit-transform: rotate(45deg) translate(-5px, -7px);
+          transform: rotate(45deg) translate(-5px, -7px);
+}
+
 .caixa {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -119,6 +220,12 @@ header .user .btn2:hover {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   margin: 5%;
+}
+
+@media screen and (max-width: 768px) {
+  .caixa {
+    display: block;
+  }
 }
 
 .caixa .part_1 {
@@ -129,8 +236,14 @@ header .user .btn2:hover {
           justify-content: center;
 }
 
+@media screen and (max-width: 768px) {
+  .caixa .part_1 {
+    width: 100%;
+  }
+}
+
 .caixa .part_1 h1 {
-  font-size: 80px;
+  font-size: 5em;
   color: #070067;
   cursor: pointer;
 }
@@ -183,5 +296,29 @@ header .user .btn2:hover {
 
 .caixa .part_2 img {
   width: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  .caixa .part_2 {
+    display: none;
+  }
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  background: #eeebeb;
+  font-family: sans-serif;
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    overflow-x: hidden;
+  }
 }
 /*# sourceMappingURL=style.css.map */
